[package]
name = "tokio-util"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.5.0"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-util/0.5.0/tokio_util"
description = """
Additional utilities for working with Tokio.
"""
categories = ["asynchronous"]

[dependencies]
tokio = { version = "0.3.0", path = "../tokio" }

slab = { version = "0.4.1", optional = true } # Backs `DelayQueue`

[dev-dependencies]
tokio = { version = "0.3.0", path = "../tokio", features = ["full"] }
tokio-test = { version = "0.3.0", path = "../tokio-test" }

futures = "0.3.0"
futures-test = "0.3.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
