[package]
name = "tokio-util"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.5.0"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-util/0.5.0/tokio_util"
description = """
Additional utilities for working with Tokio.
"""
categories = ["asynchronous"]

[dependencies]
tokio = { version = "0.3.0", path = "../tokio" }

[dev-dependencies]
tokio = { version = "0.3.0", path = "../tokio", features = ["sync"] }


futures = "0.3.0"

