[package]
name = "tokio"
version = "0.3.3"
edition = "2018"
authors = ["Tokio Contributors <team@tokio.rs>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokio/0.3.3/tokio/"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
An event-driven, non-blocking I/O platform for writing asynchronous I/O
backed applications.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["io", "async", "non-blocking", "futures"]

[features]
default = []
sync = []

[dependencies]
pin-project-lite = "0.1.1"
futures-core = { version = "0.3.0", optional = true }
futures-util = "0.3.7"


[dev-dependencies]
futures = { version = "0.3.0", features = ["async-await"] }

[build-dependencies]
autocfg = "1" # Needed for conditionally enabling `track-caller`
